tests/src/frontend/syntax/invalid/duplicate_modifiers_class_member.sk
class C() {
  private private static fun m(): String { "Fail" }
}
